--- a/me/index.html
+++ b/me/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>shag • links</title>
+    <title>shag • dashboard</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😁</text></svg>">
     <style>
         :root {
-            --glass-card: rgba(255, 255, 255, 0.45);
-            --glass-item: rgba(255, 255, 255, 0.25);
-            --text-main: #1d1d1f;
-            --text-sub: #424245;
+            --glass-card: rgba(235, 245, 255, 0.5); /* Tinted glass per image_ab9876 */
+            --glass-button: rgba(255, 255, 255, 0.4);
+            --text-primary: #37474f;
+            --text-secondary: #78909c;
         }
 
         @media (prefers-color-scheme: dark) {
             :root {
-                --glass-card: rgba(20, 20, 25, 0.4);
-                --glass-item: rgba(255, 255, 255, 0.08);
-                --text-main: #ffffff;
-                --text-sub: #a1a1a6;
+                --glass-card: rgba(20, 25, 35, 0.5);
+                --glass-button: rgba(255, 255, 255, 0.05);
+                --text-primary: #ffffff;
+                --text-secondary: #a1a1a6;
             }
         }
 
@@ -29,148 +29,171 @@
             height: 100dvh; width: 100vw;
             display: flex; justify-content: center; align-items: center;
             font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", sans-serif;
-            overflow: hidden;
-            background-color: #000;
+            background-color: #000; overflow: hidden;
         }
 
-        /* Deeply blurred background layer */
-        .bg-layer {
+        /* Full-screen Deep Blur Wash */
+        .bg-wash {
             position: fixed; top: 0; left: 0; right: 0; bottom: 0;
             background-size: cover; background-position: center;
-            filter: blur(100px) brightness(0.9);
-            transform: scale(1.3);
-            z-index: -1;
-            transition: background-image 1.2s ease-in-out;
+            filter: blur(100px) brightness(0.95);
+            transform: scale(1.4); z-index: -1;
+            transition: background-image 1.5s ease;
         }
 
-        /* Borderless Main Card */
-        .main-card {
+        /* The Main Container */
+        .dashboard {
             width: 100%; height: 100%;
-            max-width: 440px; max-height: 850px;
+            max-width: 450px; max-height: 900px;
             background: var(--glass-card);
-            -webkit-backdrop-filter: blur(15px) saturate(180%); 
-            backdrop-filter: blur(15px) saturate(180%);
-            border: none; /* Removed borders per request */
-            display: flex; flex-direction: column; 
-            padding: 35px; gap: 24px;
-            animation: fadeUp 1s cubic-bezier(0.2, 0.8, 0.2, 1);
+            backdrop-filter: blur(30px) saturate(140%);
+            -webkit-backdrop-filter: blur(30px) saturate(140%);
+            display: flex; flex-direction: column;
+            padding: 40px 24px; border: none;
+            animation: fadeIn 1.2s ease-out;
         }
 
         @media (min-width: 600px) {
-            .main-card { 
-                height: auto; border-radius: 56px; 
-                box-shadow: 0 50px 100px rgba(0,0,0,0.1);
-            }
+            .dashboard { border-radius: 60px; height: 95%; box-shadow: 0 50px 100px rgba(0,0,0,0.1); }
         }
 
-        /* Header matching the new requested layout */
-        .card-header {
+        /* Header matching image_ab9876.png */
+        header {
             display: flex; justify-content: space-between; align-items: center;
-            font-size: 0.9rem; font-weight: 500; opacity: 0.8;
+            margin-bottom: 20px; font-weight: 500; font-size: 0.95rem;
         }
-        .date-display { font-weight: 600; color: var(--text-sub); }
-        .initials { font-weight: 800; letter-spacing: 0.5px; color: var(--text-main); }
+        .date { color: var(--text-secondary); }
+        .initials { font-weight: 800; letter-spacing: 1px; color: var(--text-primary); }
+        .palm svg { width: 28px; height: 28px; fill: var(--text-primary); opacity: 0.8; }
 
-        /* Crisp Hero Section */
+        /* The "Borderless" Masked Image Effect */
+        .hero-wrap {
+            width: 100%; height: 350px;
+            margin-bottom: 20px;
+            -webkit-mask-image: linear-gradient(to bottom, 
+                rgba(0,0,0,0) 0%, 
+                rgba(0,0,0,1) 15%, 
+                rgba(0,0,0,1) 80%, 
+                rgba(0,0,0,0) 100%);
+            mask-image: linear-gradient(to bottom, 
+                rgba(0,0,0,0) 0%, 
+                rgba(0,0,0,1) 15%, 
+                rgba(0,0,0,1) 80%, 
+                rgba(0,0,0,0) 100%);
+        }
         .hero-img {
-            width: 100%; height: 280px;
+            width: 100%; height: 100%;
             background-size: cover; background-position: center;
-            border-radius: 40px;
-            box-shadow: 0 10px 40px rgba(0,0,0,0.08);
-            transition: background-image 1.2s ease-in-out;
+            transition: background-image 1.5s ease;
         }
 
-        .card-greeting { text-align: center; }
-        .card-greeting h1 { font-size: 1.85rem; font-weight: 600; margin: 0; letter-spacing: -0.03em; }
-        .card-greeting p { font-size: 1rem; margin: 10px 0 0 0; color: var(--text-sub); font-weight: 450; }
-
-        /* Floating borderless grid */
-        .dock {
-            display: grid; grid-template-columns: repeat(2, 1fr); gap: 16px;
-            margin-top: auto; padding-bottom: 20px;
+        /* Greeting with Serif Font */
+        .greeting {
+            text-align: center; margin-bottom: 40px;
+        }
+        .greeting h1 {
+            font-family: "Georgia", serif; /* Matches image_ab9876 style */
+            font-size: 2.2rem; font-weight: 400;
+            color: var(--text-primary); margin: 0;
+        }
+        .greeting p {
+            font-size: 1.1rem; color: var(--text-secondary);
+            margin: 10px 0 0 0; font-weight: 450;
         }
 
-        .dock-item {
-            background: var(--glass-item);
-            border: none; /* Removed borders per request */
-            border-radius: 36px;
-            aspect-ratio: 1 / 1;
-            display: flex; align-items: center; justify-content: center;
+        /* Bottom Button Layout */
+        .grid {
+            display: grid; grid-template-columns: 1fr 1fr;
+            gap: 16px; margin-top: auto;
+        }
+
+        .btn {
+            background: var(--glass-button);
+            border-radius: 32px; padding: 25px 15px;
+            display: flex; flex-direction: column;
+            align-items: center; justify-content: center;
             text-decoration: none; color: inherit;
-            transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+            transition: all 0.3s cubic-bezier(0.2, 0.8, 0.2, 1);
+            border: 1px solid rgba(255,255,255,0.1);
         }
 
-        .dock-item:active { transform: scale(0.9); background: rgba(255, 255, 255, 0.15); }
-        .dock-item svg { width: 38px; height: 38px; fill: var(--text-main); }
+        .btn:active { transform: scale(0.94); background: rgba(255,255,255,0.2); }
+        .btn svg { width: 28px; height: 28px; margin-bottom: 12px; fill: var(--text-primary); }
+        .btn span { font-size: 0.9rem; font-weight: 500; color: var(--text-secondary); }
 
-        .pulse { animation: pulse 4s infinite ease-in-out; }
-        @keyframes pulse { 0%, 100% { transform: scale(1); opacity: 1; } 50% { transform: scale(1.06); opacity: 0.8; } }
-        @keyframes fadeUp { from { opacity: 0; transform: translateY(40px); } to { opacity: 1; transform: translateY(0); } }
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
     </style>
 </head>
-<body id="dynamic-body">
+<body id="body">
 
-    <div class="bg-layer" id="bg-blur"></div>
+    <div class="bg-wash" id="wash"></div>
 
-    <div class="main-card">
-        <div class="card-header">
-            <div id="current-date" class="date-display">---</div>
+    <div class="dashboard">
+        <header>
+            <div class="palm">
+                <svg viewBox="0 0 24 24"><path d="M12 2c-5.33 4-8 7.67-8 11 0 3.31 2.69 6 6 6v3h4v-3c3.31 0 6-2.69 6-6 0-3.33-2.67-7-8-11zm-2.5 8c.83 0 1.5.67 1.5 1.5S10.33 13 9.5 13s-1.5-.67-1.5-1.5.67-1.5 1.5-1.5zM12 17c-1.66 0-3-1.34-3-3 0-.55.45-1 1-1s1 .45 1 1c0 .55.45 1 1 1s1-.45 1-1c0-.55.45-1 1-1s1 .45 1 1c0 1.66-1.34 3-3 3zm2.5-5.5c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5z"/></svg>
+            </div>
+            <div id="cur-date" class="date">---</div>
             <div class="initials">SS</div>
+        </header>
+
+        <div class="hero-wrap">
+            <div class="hero-img" id="hero"></div>
         </div>
 
-        <div class="hero-img" id="inner-hero"></div>
-
-        <div class="card-greeting">
-            <h1 id="time-greet">Loading...</h1>
-            <p id="weather-text">Updating weather in SF...</p>
+        <div class="greeting">
+            <h1 id="greet">Good Afternoon</h1>
+            <p id="weather">57°F and clear sky in SF</p>
         </div>
 
-        <div class="dock">
-            <a href="https://instagram.com/srivastsh" class="dock-item" target="_blank">
-                <svg class="pulse" style="animation-delay: 0s;" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.85s-.011 3.584-.069 4.85c-.148 3.228-1.667 4.771-4.919 4.919-1.266.058-1.644.069-4.85.069s-3.584-.011-4.85-.069c-3.228-.148-4.771-1.667-4.919-4.919C2.175 15.584 2.164 15.204 2.164 12s.011-3.584.069-4.85C2.38 3.922 3.922 2.38 7.15 2.233c1.266-.058 1.645-.069 4.85-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.272 2.695.072 7.053.014 8.333 0 8.741 0 12s.014 3.667.072 4.947c.2 4.358 2.623 6.78 6.981 6.98 1.28.058 1.689.072 4.947.072s3.667-.014 4.947-.072c4.358-.2 6.78-2.623 6.98-6.98.058-1.28.072-1.689.072-4.947s-.014-3.667-.072-4.947c-.2-4.358-2.623-6.78-6.98-6.98C15.667.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 1 0 0 12.324 6.162 6.162 0 0 0 0-12.324zM12 16a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm6.406-11.845a1.44 1.44 0 1 0 0 2.881 1.44 1.44 0 0 0 0-2.881z"/></svg>
+        <div class="grid">
+            <a href="https://instagram.com/srivastsh" class="btn">
+                <svg viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.85s-.011 3.584-.069 4.85c-.148 3.228-1.667 4.771-4.919 4.919-1.266.058-1.644.069-4.85.069s-3.584-.011-4.85-.069c-3.228-.148-4.771-1.667-4.919-4.919C2.175 15.584 2.164 15.204 2.164 12s.011-3.584.069-4.85C2.38 3.922 3.922 2.38 7.15 2.233c1.266-.058 1.645-.069 4.85-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.272 2.695.072 7.053.014 8.333 0 8.741 0 12s.014 3.667.072 4.947c.2 4.358 2.623 6.78 6.981 6.98 1.28.058 1.689.072 4.947.072s3.667-.014 4.947-.072c4.358-.2 6.78-2.623 6.98-6.98.058-1.28.072-1.689.072-4.947s-.014-3.667-.072-4.947c-.2-4.358-2.623-6.78-6.98-6.98C15.667.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 1 0 0 12.324 6.162 6.162 0 0 0 0-12.324zM12 16a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm6.406-11.845a1.44 1.44 0 1 0 0 2.881 1.44 1.44 0 0 0 0-2.881z"/></svg>
+                <span>Instagram</span>
             </a>
-            <a href="https://x.com/srivastsh" class="dock-item" target="_blank">
-                <svg class="pulse" style="animation-delay: 0.2s;" viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+            <a href="https://x.com/srivastsh" class="btn">
+                <svg viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+                <span>Twitter</span>
             </a>
-            <a href="https://linkedin.com/in/srivastsh" class="dock-item" target="_blank">
-                <svg class="pulse" style="animation-delay: 0.4s;" viewBox="0 0 24 24"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 0 1-2.063-2.065 2.064 2.064 0 1 1 2.063 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
+            <a href="https://linkedin.com/in/srivastsh" class="btn">
+                <svg viewBox="0 0 24 24"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 0 1-2.063-2.065 2.064 2.064 0 1 1 2.063 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
+                <span>LinkedIn</span>
             </a>
-            <a href="mailto:srivastsh@gmail.com" class="dock-item">
-                <svg class="pulse" style="animation-delay: 0.6s;" viewBox="0 0 24 24"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
+            <a href="mailto:srivastsh@gmail.com" class="btn">
+                <svg viewBox="0 0 24 24"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
+                <span>Email</span>
             </a>
         </div>
     </div>
 
     <script>
-        async function updateDashboard() {
+        async function update() {
             const now = new Date();
             const hrs = now.getHours();
-            const greet = document.getElementById('time-greet');
-            const bgBlur = document.getElementById('bg-blur');
-            const innerHero = document.getElementById('inner-hero');
-            const dateEl = document.getElementById('current-date');
-            const weatherEl = document.getElementById('weather-text');
+            
+            // 1. Date (Mon, Jan 26)
+            document.getElementById('cur-date').innerText = now.toLocaleDateString('en-US', { weekday: 'short', month: 'short', day: 'numeric' });
 
-            dateEl.innerText = now.toLocaleDateString('en-US', { weekday: 'short', month: 'short', day: 'numeric' });
+            // 2. Background/Hero Images & Greeting
+            let img, msg;
+            if (hrs >= 5 && hrs < 11) { msg = "Good Morning"; img = "../morning.jpg"; }
+            else if (hrs >= 11 && hrs < 17) { msg = "Good Afternoon"; img = "../day.jpg"; }
+            else if (hrs >= 17 && hrs < 21) { msg = "Good Evening"; img = "../evening.jpg"; }
+            else { msg = "Good Night"; img = "../night.jpg"; }
 
-            let bg, message;
-            if (hrs >= 5 && hrs < 11) { message = "Good Morning"; bg = "../morning.jpg"; }
-            else if (hrs >= 11 && hrs < 17) { message = "Good Afternoon"; bg = "../day.jpg"; }
-            else if (hrs >= 17 && hrs < 21) { message = "Good Evening"; bg = "../evening.jpg"; }
-            else { message = "Good Night"; bg = "../night.jpg"; }
+            document.getElementById('greet').innerText = msg;
+            const url = `url('${img}')`;
+            document.getElementById('wash').style.backgroundImage = url;
+            document.getElementById('hero').style.backgroundImage = url;
 
-            greet.innerText = message;
-            const url = `url('${bg}')`;
-            bgBlur.style.backgroundImage = url;
-            innerHero.style.backgroundImage = url;
-
+            // 3. SF Weather
             try {
-                const res = await fetch(`https://api.open-meteo.com/v1/forecast?latitude=37.7749&longitude=-122.4194&current_weather=true&temperature_unit=fahrenheit`);
-                const data = await res.json();
-                weatherEl.innerText = `${Math.round(data.current_weather.temperature)}°F and clear sky in SF`;
-            } catch (e) { weatherEl.innerText = "58°F and clear sky in SF"; }
+                const r = await fetch('https://api.open-meteo.com/v1/forecast?latitude=37.77&longitude=-122.41&current_weather=true&temperature_unit=fahrenheit');
+                const d = await r.json();
+                document.getElementById('weather').innerText = `${Math.round(d.current_weather.temperature)}°F and clear sky in SF`;
+            } catch (e) { document.getElementById('weather').innerText = "57°F and clear sky in SF"; }
         }
-        updateDashboard();
+        update();
     </script>
 </body>
 </html>
